# cocotb-introduction

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
cocotb_introduction/: __init__.py  config.py  fifo.py  messages.py  queue.py  runner.py  valid.py  validready.py
hdl/: back_adder.vhd  bfifo.vhd  delta_cocotb_example.vhd  delta_example.vhd  fifo.vhd  simple_adder.vhd  simulation_handle_example.vhd
tests/: Makefile  adder_tests.py  back_adder_tests.py  back_adder_uvm.py  coverage.yaml  delta_cocotb_example.py  delta_example.py  fifo_tests.py  simple_tests.py  simulation_handle_example.py  tasks.py  test_adder.py  test_back_adder.py  test_back_adder_uvm.py  test_delta_cocotb_example.py  test_delta_example.py  test_fifo.py  test_simple.py  test_simulation_handle_example.py  tests.py
tests/sim_build/: work-obj93.cf
tests/simple_tests/: Makefile  simple_tests.py
