[tool.poetry]
name = "cocotb-introduction"
version = "0.1.0"
description = "Contains a few examples on cocotb. This project should be paired with the cocotb-introduction talk."
authors = ["Andrew Andre Powell <andrewandrepowell2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cocotb = "^1.8.1"
invoke = "^2.2.0"
pytest = "^8.2.1"
cocotb-coverage = "^1.2.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
pyuvm = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
